--- a/cv-site/index.html
+++ b/cv-site/index.html
@@ -20,9 +20,18 @@
   <section id="proiecte">
     <h2>Proiectele mele</h2>
     <div class="galerie">
-      <div><img src="images/proiect1.jpg" alt="Proiect 1"><p>Electrosoc</p></div>
-      <div><img src="images/proiect2.jpg" alt="Proiect 2"><p>Descriere proiect 2</p></div>
-      <div><img src="images/proiect3.jpg" alt="Proiect 3"><p>Descriere proiect 3</p></div>
+      <div class="proiect">
+        <img src="images/proiect1.jpg" alt="Proiect 1">
+        <p class="descriere">Electrosoc - Un proiect în care am creat un dispozitiv de tip electroșoc, folosind un transformator de 200kV.</p>
+      </div>
+      <div class="proiect">
+        <img src="images/proiect2.jpg" alt="Proiect 2">
+        <p class="descriere">Proiect 2 - Descrierea detaliată a acestui proiect va include informații despre cum l-am realizat.</p>
+      </div>
+      <div class="proiect">
+        <img src="images/proiect3.jpg" alt="Proiect 3">
+        <p class="descriere">Proiect 3 - Aici voi descrie cum am construit un alt circuit interesant.</p>
+      </div>
     </div>
   </section>
 
