--- a/cv-site/index.html
+++ b/cv-site/index.html
@@ -22,7 +22,7 @@
     <div class="galerie">
       <div class="proiect">
         <img src="images/proiect1.jpg" alt="Proiect 1">
-        <p class="descriere">Electrosoc - Un proiect în care am creat un dispozitiv de tip electroșoc, folosind un transformator de 200kV.</p>
+        <p class="descriere">Electrosoc - Un proiect pe care l-am facut folosind un transformator 3.7v -> 200kv. Acesta are un intrerupator pentru protectie, cat si un LED ce lumineaza atunci cand intrerupatorul este inchis.</p>
       </div>
       <div class="proiect">
         <img src="images/proiect2.jpg" alt="Proiect 2">
@@ -38,7 +38,7 @@
   <section id="contact">
     <h2>Contact</h2>
     <p>Email: minciumihai54@gmail.com</p>
-    <p>GitHub: <a href="https://github.com/nume-utilizator" target="_blank">https://github.com/mihai285</a></p>
+    <p>GitHub: <a href="https://github.com/mihai285" target="_blank">https://github.com/mihai285</a></p>
   </section>
 
   <footer>
