--- a/cv-site/index.html
+++ b/cv-site/index.html
@@ -22,7 +22,7 @@
     <div class="galerie">
       <div class="proiect">
         <img src="images/proiect1.jpg" alt="Proiect 1">
-        <p class="descriere">Electrosoc - Un proiect pe care l-am facut folosind un transformator 3.7v -> 200kv. Acesta are un intrerupator pentru protectie, cat si un LED ce lumineaza atunci cand intrerupatorul este inchis.</p>
+        <p class="descriere">Electrosoc - Un proiect pe care l-am facut folosind un transformator 3.7v -> 200kv. Acesta are un intrerupator pentru protectie, cat si un LED ce lumineaza atunci cand intrerupatorul este inchis. Bateria acestuia este una li-ion 18650, iar eu am atasat un modul de incarcare TP4056 pentru a o putea incarca.</p>
       </div>
       <div class="proiect">
         <img src="images/proiect2.jpg" alt="Proiect 2">
