--- a/cv-site/index.html
+++ b/cv-site/index.html
@@ -14,9 +14,15 @@
 
   <section id="despre">
     <h2>Despre mine</h2>
-    <p>Sunt un elev pasionat de tehnologie, electronică și programare. Îmi place să învăț lucruri noi și să construiesc proiecte practice, de la site-uri web la circuite electronice.</p>
+    <p>Sunt o persoana pasionata de tehnologie, electronică și programare. Îmi place să învăț lucruri noi și să construiesc proiecte practice, de la site-uri web la circuite electronice.</p>
   </section>
 
+  <section id="cunostinte">
+    <h2>cunostinte si experiente</h2>
+    <p>Am experiență în arhitectura procesoarelor, cu un focus pe proiectarea unităților de procesare, optimizarea performanței și integrarea acestora în sisteme complexe.</p>
+
+
+  </section>
   <section id="proiecte">
     <h2>Proiectele mele</h2>
     <div class="galerie">
@@ -27,6 +33,7 @@
     </div>
   </section>
 
+  
   <section id="contact">
     <h2>Contact</h2>
     <p>Email: minciumihai54@gmail.com</p>
