--- a/cv-site/index.html
+++ b/cv-site/index.html
@@ -19,8 +19,9 @@
 
   <section id="cunostinte">
     <h2>cunostinte si experiente</h2>
-    <p>Am experiență în arhitectura procesoarelor, cu un focus pe proiectarea unităților de procesare, optimizarea performanței și integrarea acestora în sisteme complexe.</p>
-
+    <p>Experiență în arhitectura procesoarelor, cu un focus pe proiectarea unităților de procesare, optimizarea performanței și integrarea acestora în sisteme complexe.</p>
+    <p>Experiență în designul PCB-urilor, incluzând proiectarea circuitelor, selecția componentelor și realizarea layout-urilor pentru plăci de bază, avand un parteneriat cu JLCPCB</p>
+    <p>Experiență în diagnosticarea și repararea circuitelor electronice, utilizând echipamente precum osciloscoape, multimetre și testere de componente, pentru a identifica defectele hardware și a le remedia eficient pe plăci de circuit și dispozitive electronice.</p>
 
   </section>
   <section id="proiecte">
