--- a/cv-site/index.html
+++ b/cv-site/index.html
@@ -15,6 +15,7 @@
   <section id="despre">
     <h2>Despre mine</h2>
     <p>Sunt o persoana pasionata de tehnologie, electronică și programare. Îmi place să învăț lucruri noi și să construiesc proiecte practice, de la site-uri web la circuite electronice.</p>
+    <p>Am obținut diploma de licență în domeniul Electricității la Universitatea Politehnica, specializarea de inginer electric, cu un focus pe sisteme electrice, automatizări, etc”</p>
   </section>
 
   <section id="cunostinte">
