--- a/cv-site/index.html
+++ b/cv-site/index.html
@@ -35,7 +35,7 @@
     </div>
   </section>
 
-  <section>
+  <section id="viitoare_proiecte">
     <h2>Viitoare proiecte</h2>
 
     <p>conceperea si construirea unui procesor de 8 bits, pe breadboard.</p>
